--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,6 +5,11 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">Upload post</a>
+            <form action="/reqdto" id="infform" method="post" enctype="multipart/form-data">
+                <input type="file" name="psd">
+                <input type="number" name="height">
+                <input type="submit" value="POST">
+            </form>
             {{#userName}}
                 Logged in as: <span id="user">{{userName}}</span>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
